--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         screens: {
           sm: '480px',
-          md: '480x',
-          lg: '480px',
-          xl: '480px',
+          md: '768px',
+          lg: '768px',
+          xl: '768px',
         },
         extend: {},
       },
